# sfml-platformer-game

./: .gitignore  CMakeLists.txt  compilecommands.txt  readme.md
_dev/: RandomProject2Tileset.tsx  cool_cave_tile.ase  player.aseprite  testmap1.tmx  tiles_1.ase  woompa.ase
assets/font/: kubasta_regular_8.fnt
assets/graphics/: tiles_1.ase
assets/leveleditor/: CameraZone.tx  Terrain.tx
leveldata/: testmap1.tmx  tiles_1.tsj
media/: video1.mkv
src/: AnimatedSprite.hpp  Area2D.hpp  BitmapFont.hpp  Camera.hpp  ChunkMap.hpp  Collectable.hpp  ColliderEntity.hpp  CollisionAlgorithms.hpp  CollisionBody.hpp  Debugger.hpp  GlobalDefines.hpp  GravityEntity.hpp  GuiControlElement.hpp  GuiElement.hpp  GuiLabel.hpp  GuiUtilities.hpp  Hitbox.hpp  HitboxEntity.hpp  Inventory.hpp  KeyFrameAnimator.hpp  LayoutManagers.hpp  Level.hpp  MaskArea2D.hpp  MaskAreaWizard.hpp  NineSlice.hpp  Player.hpp  StaticTile.hpp  TMXParser.hpp  TerrainBody.hpp  Timer.hpp  Vector2Functions.hpp  Vector2fFunctions.hpp  XMLParser.hpp  main.cpp
